[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "pandas>=2.3.1",
    "pyyaml>=6.0.2",
    "snowflake-connector-python>=3.16.0",
    "streamlit>=1.46.1",
    "tavily-python>=0.7.9",
    "trafilatura>=2.0.0",
]
